Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -61,10 +61,9 @@
         for (let i = 1; i <= 3; i++) {
           button.addEventListener("click", function (e) {
             if (i === 1 && button.id) {
-              e[button.id]();
-              pre.textContent += `Event handler for event 1 calling ${button.id}()\n`;
+              console.log(i, button.id);
             }
-            pre.textContent += `Click event ${i} processed on "${button.textContent}" button\n`;
+            console.log(button.innerText);
           });
         }
       });
