Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -56,9 +56,11 @@
       document.addEventListener(
         "click",
         function () {
-          pre.textContent = "";
-        },
-        true
+          setTimeout(function () {
+            pre.textContent = "";
+          }, 1000);
+        }
+        // true
       );
 
       document.querySelectorAll("button").forEach(function (button) {
