Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -59,8 +59,8 @@
           setTimeout(function () {
             pre.textContent = "";
           }, 1000);
-        }
-        // true
+        },
+        true
       );
 
       document.querySelectorAll("button").forEach(function (button) {
