Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -56,9 +56,9 @@
       document.addEventListener(
         "click",
         function () {
-          setTimeout(function () {
-            pre.textContent = "";
-          }, 1000);
+          // setTimeout(function () {
+          pre.textContent = "";
+          // }, 1000);
         },
         true
       );
