Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -55,10 +55,11 @@
 
       document.addEventListener(
         "click",
-        function () {
-          // setTimeout(function () {
-          pre.textContent = "";
-          // }, 1000);
+        function (e) {
+          setTimeout(function () {
+            pre.textContent = "";
+            console.log(e.target.tagName);
+          }, 1000);
         },
         true
       );
