Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -56,10 +56,10 @@
       document.addEventListener(
         "click",
         function (e) {
-          setTimeout(function () {
-            pre.textContent = "";
-            console.log(e.target.tagName);
-          }, 1000);
+          // setTimeout(function () {
+          pre.textContent = "";
+          console.log(e.target.tagName);
+          // }, 1000);
         },
         true
       );
