Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
@@ -9,6 +9,14 @@
         },
         { capture: true }
       );
+
+      document.addEventListener(
+        "click",
+        function (e) {
+          console.log(e.target.tagName);
+        },
+        true
+      );
     </script>
   </body>
 </html>
