Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
@@ -18,6 +18,15 @@
     </form>
 
     <script>
+      for (const elem of document.querySelectorAll("*")) {
+        elem.addEventListener(
+          "click",
+          function () {
+            console.log(`Capturing ${elem.tagName}`);
+          },
+          { capture: false }
+        );
+      }
       // document.addEventListener(
       //   "click",
       //   function (e) {
