Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/capturing.html
@@ -24,6 +24,14 @@
           function () {
             console.log(`Capturing ${elem.tagName}`);
           },
+          { capture: true }
+        );
+
+        elem.addEventListener(
+          "click",
+          function () {
+            console.log(`Bubbling ${elem.tagName}`);
+          },
           { capture: false }
         );
       }
