Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <button type="button">⇦</button>
+    <button type="button">⇨</button>
+
     <script>
       console.log("ola");
     </script>
