Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -4,6 +4,69 @@
     <button type="button">⇦</button>
     <button type="button">⇨</button>
 
+    <ul>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/1.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/2.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/3.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/4.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/5.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/6.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/7.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/8.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/9.png"
+          alt=""
+        />
+      </li>
+      <li>
+        <img
+          src="https://en.js.cx/carousel/10.png"
+          alt=""
+        />
+      </li>
+    </ul>
+
     <script>
       console.log("ola");
     </script>
