Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -68,7 +68,15 @@
     </ul>
 
     <script>
-      console.log("ola");
+      let i = 1;
+      for (let li of document.querySelectorAll("li")) {
+        li.style.position = "relative";
+        li.insertAdjacentHTML(
+          "beforeend",
+          `<span style="position:absolute;left:0;top:0">${i}</span>`
+        );
+        i++;
+      }
     </script>
   </body>
 </html>
