--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <button type="button">⇦</button>
-    <button type="button">⇨</button>
-
-    <ul>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/1.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/2.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/3.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/4.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/5.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/6.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/7.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/8.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/9.png"
-          alt=""
-        />
-      </li>
-      <li>
-        <img
-          src="https://en.js.cx/carousel/10.png"
-          alt=""
-        />
-      </li>
-    </ul>
+    <div id="carousel">
+      <button type="button">⇦</button>
+      <div id="gallery">
+        <ul>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/1.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/2.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/3.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/4.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/5.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/6.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/7.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/8.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/9.png"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="https://en.js.cx/carousel/10.png"
+              alt=""
+            />
+          </li>
+        </ul>
+      </div>
+      <button type="button">⇨</button>
+    </div>
 
     <script>
       let i = 1;
