Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -9,6 +9,9 @@
       #carousel {
         position: relative;
         width: 398px;
+        padding: 10px 40px;
+        border: 1px solid #ccc;
+        border-radius: 15px;
         background-color: #eee;
       }
     </style>
