Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -14,12 +14,16 @@
         border-radius: 15px;
         background-color: #eee;
       }
+
+      .gallery li {
+        display: inline-block;
+      }
     </style>
   </head>
   <body>
     <div id="carousel">
       <button type="button">⇦</button>
-      <div id="gallery">
+      <div class="gallery">
         <ul>
           <li>
             <img
