Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -15,6 +15,15 @@
         background-color: #eee;
       }
 
+      .gallery ul {
+        height: 130px;
+        width: 9999px;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        font-size: 0;
+      }
+
       .gallery li {
         display: inline-block;
       }
