Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -21,11 +21,12 @@
         padding: 0;
         margin: 0;
         list-style: none;
-        font-size: 0;
+        /* font-size: 0; */
       }
 
       .gallery li {
         display: inline-block;
+        background-color: lightcoral;
       }
     </style>
   </head>
@@ -99,16 +100,6 @@
       <button type="button">⇨</button>
     </div>
 
-    <script>
-      let i = 1;
-      for (let li of carousel.querySelectorAll("li")) {
-        li.style.position = "relative";
-        li.insertAdjacentHTML(
-          "beforeend",
-          `<span style="position:absolute;left:0;top:0">${i}</span>`
-        );
-        i++;
-      }
-    </script>
+    <script></script>
   </body>
 </html>
