Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -21,7 +21,7 @@
         padding: 0;
         margin: 0;
         list-style: none;
-        /* font-size: 0; */
+        font-size: 0;
       }
 
       .gallery li {
