Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -21,6 +21,9 @@
         padding: 0;
         margin: 0;
         list-style: none;
+        transition: margin-left 250ms;
+        /* remove white-space between inline-block'ed li */
+        /* http://davidwalsh.name/remove-whitespace-inline-block */
         font-size: 0;
       }
 
