--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -15,6 +15,11 @@
         background-color: #eee;
       }
 
+      .gallery {
+        width: 390px;
+        overflow: hidden;
+      }
+
       .gallery ul {
         height: 130px;
         width: 9999px;
