Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -39,7 +39,12 @@
   </head>
   <body>
     <div id="carousel">
-      <button type="button">⇦</button>
+      <button
+        class="arrow left"
+        type="button"
+      >
+        ⇦
+      </button>
       <div class="gallery">
         <ul>
           <li>
@@ -104,7 +109,12 @@
           </li>
         </ul>
       </div>
-      <button type="button">⇨</button>
+      <button
+        class="arrow right"
+        type="button"
+      >
+        ⇨
+      </button>
     </div>
 
     <script></script>
