Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -15,6 +15,19 @@
         background-color: #eee;
       }
 
+      .arrow {
+        position: absolute;
+        top: 60px;
+      }
+
+      .prev {
+        left: 7px;
+      }
+
+      .next {
+        right: 7px;
+      }
+
       .gallery {
         width: 390px;
         overflow: hidden;
@@ -40,7 +53,7 @@
   <body>
     <div id="carousel">
       <button
-        class="arrow left"
+        class="arrow prev"
         type="button"
       >
         ⇦
@@ -110,7 +123,7 @@
         </ul>
       </div>
       <button
-        class="arrow right"
+        class="arrow next"
         type="button"
       >
         ⇨
