--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -18,6 +18,14 @@
       .arrow {
         position: absolute;
         top: 60px;
+        padding: 0;
+        background-color: #ddd;
+        border-radius: 15px;
+        border: 1px solid grey;
+        font-size: 24px;
+        line-height: 24px;
+        color: #444;
+        display: block;
       }
 
       .prev {
