--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -28,6 +28,15 @@
         display: block;
       }
 
+      .arrow:focus {
+        outline: none;
+      }
+
+      .arrow:hover {
+        background-color: #ccc;
+        cursor: pointer;
+      }
+
       .prev {
         left: 7px;
       }
