Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -15,6 +15,11 @@
         background-color: #eee;
       }
 
+      #carousel img {
+        width: 130px;
+        height: 130px;
+      }
+
       .arrow {
         position: absolute;
         top: 60px;
