Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -6,7 +6,7 @@
         padding: 10px;
       }
 
-      #carousel {
+      .carousel {
         position: relative;
         width: 398px;
         padding: 10px 40px;
@@ -15,7 +15,7 @@
         background-color: #eee;
       }
 
-      #carousel img {
+      .carousel img {
         width: 130px;
         height: 130px;
       }
@@ -73,7 +73,10 @@
     </style>
   </head>
   <body>
-    <div id="carousel">
+    <div
+      id="carousel"
+      class="carousel"
+    >
       <button
         class="arrow prev"
         type="button"
