--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -155,6 +155,14 @@
       </button>
     </div>
 
-    <script></script>
+    <script>
+      const carousel = document.getElementById("carousel");
+      const list = carousel.querySelector("ul");
+      const listItems = carousel.querySelectorAll("li");
+      const width = 130;
+      const count = 3;
+
+      console.log(carousel);
+    </script>
   </body>
 </html>
