--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -159,10 +159,19 @@
       const carousel = document.getElementById("carousel");
       const list = carousel.querySelector("ul");
       const listItems = carousel.querySelectorAll("li");
+
       const width = 130;
       const count = 3;
 
-      console.log(carousel);
+      let position = 0;
+
+      carousel.querySelector(".prev").onclick = function (e) {
+        console.log(e.type);
+      };
+
+      carousel.querySelector(".next").onclick = function (e) {
+        console.log(e.target.tagName);
+      };
     </script>
   </body>
 </html>
