--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -61,6 +61,7 @@
         padding: 0;
         margin: 0;
         list-style: none;
+        background-color: lightpink;
         transition: margin-left 250ms;
         /* remove white-space between inline-block'ed li */
         /* http://davidwalsh.name/remove-whitespace-inline-block */
@@ -166,11 +167,13 @@
       let position = 0;
 
       carousel.querySelector(".prev").onclick = function (e) {
-        console.log(e.type);
+        position += width * (count - 1);
+        list.style.marginLeft = position + "px";
       };
 
       carousel.querySelector(".next").onclick = function (e) {
-        console.log(e.target.tagName);
+        position -= width * (count - 1);
+        list.style.marginLeft = position + "px";
       };
     </script>
   </body>
