Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -168,6 +168,7 @@
 
       carousel.querySelector(".prev").onclick = function (e) {
         position += width * (count - 1);
+        position = Math.min(position, 0);
         list.style.marginLeft = position + "px";
       };
 
