--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -174,6 +174,7 @@
 
       carousel.querySelector(".next").onclick = function (e) {
         position -= width * (count - 1);
+        position = Math.max(position, -width * (listitems.length - count));
         list.style.marginLeft = position + "px";
       };
     </script>
