Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/carousel.html
@@ -52,7 +52,7 @@
 
       .gallery {
         width: 390px;
-        overflow: auto;
+        overflow: hidden;
       }
 
       .gallery ul {
@@ -61,7 +61,6 @@
         padding: 0;
         margin: 0;
         list-style: none;
-        background-color: lightpink;
         transition: margin-left 250ms;
         /* remove white-space between inline-block'ed li */
         /* http://davidwalsh.name/remove-whitespace-inline-block */
