Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
@@ -67,6 +67,10 @@
           ballCoords.left = 0;
         }
 
+        if (ballCoords.left + ball.clientWidth > field.clientWidth) {
+          ballCoords.left = field.clientWidth - ball.clientWidth;
+        }
+
         ball.style.top = ballCoords.top + "px";
         ball.style.left = ballCoords.left + "px";
       };
