--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <table id="bagua-table"></table>
+
     <script>
-      console.log("ola");
-      console.log("tudo bem?");
+      const table = document.getElementById("bagua-table");
+      console.log(table);
     </script>
   </body>
 </html>
