Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <table id="bagua-table"></table>
+    <table id="bagua-table">
+      <tr>
+        <th colspan="3">
+          <em>Bagua</em> Chart: Direction, Element, Color, Meaning
+        </th>
+      </tr>
+    </table>
 
     <script>
       const table = document.getElementById("bagua-table");
