Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -7,6 +7,11 @@
           <em>Bagua</em> Chart: Direction, Element, Color, Meaning
         </th>
       </tr>
+      <tr>
+        <td class="nw">
+          <strong>Northwest</strong>
+        </td>
+      </tr>
     </table>
 
     <script>
