Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -10,6 +10,7 @@
       <tr>
         <td class="nw">
           <strong>Northwest</strong>
+          <br />Metal <br />Silver <br />Elders
         </td>
       </tr>
     </table>
