Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -12,6 +12,10 @@
           <strong>Northwest</strong>
           <br />Metal <br />Silver <br />Elders
         </td>
+        <td class="n">
+          <strong>North</strong>
+          <br />Water <br />Blue <br />Change
+        </td>
       </tr>
     </table>
 
