Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -16,6 +16,10 @@
           <strong>North</strong>
           <br />Water <br />Blue <br />Change
         </td>
+        <td class="ne">
+          <strong>Northeast</strong>
+          <br />Earth <br />Yellow <br />Direction
+        </td>
       </tr>
     </table>
 
