Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -21,6 +21,12 @@
           <br />Earth <br />Yellow <br />Direction
         </td>
       </tr>
+      <tr>
+        <td class="w">
+          <strong>West</strong>
+          <br />Metal <br />Gold <br />Youth
+        </td>
+      </tr>
     </table>
 
     <script>
