Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -26,6 +26,10 @@
           <strong>West</strong>
           <br />Metal <br />Gold <br />Youth
         </td>
+        <td class="c">
+          <strong>Center</strong>
+          <br />All <br />Purple <br />Harmony
+        </td>
       </tr>
     </table>
 
