Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -30,6 +30,16 @@
           <strong>Center</strong>
           <br />All <br />Purple <br />Harmony
         </td>
+        <td class="e">
+          <strong>East</strong>
+          <br />Wood <br />Blue <br />Future
+        </td>
+      </tr>
+      <tr>
+        <td class="sw">
+          <strong>Southwest</strong>
+          <br />Earth <br />Brown <br />Tranquility
+        </td>
       </tr>
     </table>
 
