Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -40,6 +40,10 @@
           <strong>Southwest</strong>
           <br />Earth <br />Brown <br />Tranquility
         </td>
+        <td class="s">
+          <strong>South</strong>
+          <br />Fire <br />Orange <br />Fame
+        </td>
       </tr>
     </table>
 
