Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -44,6 +44,10 @@
           <strong>South</strong>
           <br />Fire <br />Orange <br />Fame
         </td>
+        <td class="se">
+          <strong>Southeast</strong>
+          <br />Wood <br />Green <br />Romance
+        </td>
       </tr>
     </table>
 
