Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #bagua-table th {
+        text-align: center;
+        font-weight: bold;
+      }
+
+      #bagua-table td {
+        width: 150px;
+        /* white-space: nowrap; */
+        text-align: center;
+        vertical-align: bottom;
+        padding-top: 5px;
+        padding-bottom: 12px;
+      }
+    </style>
+  </head>
   <body>
     <table id="bagua-table">
       <tr>
@@ -53,7 +70,6 @@
 
     <script>
       const table = document.getElementById("bagua-table");
-      console.log(table);
     </script>
   </body>
 </html>
