--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -9,7 +9,7 @@
 
       #bagua-table td {
         width: 150px;
-        /* white-space: nowrap; */
+        white-space: nowrap;
         text-align: center;
         vertical-align: bottom;
         padding-top: 5px;
