Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -15,6 +15,10 @@
         padding-top: 5px;
         padding-bottom: 12px;
       }
+
+      #bagua-table .nw {
+        background-color: #999;
+      }
     </style>
   </head>
   <body>
