Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -19,6 +19,11 @@
       #bagua-table .nw {
         background-color: #999;
       }
+
+      #bagua-table .n {
+        background-color: #03f;
+        color: #fff;
+      }
     </style>
   </head>
   <body>
