Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -24,6 +24,10 @@
         background-color: #03f;
         color: #fff;
       }
+
+      #bagua-table .ne {
+        background-color: #ff6;
+      }
     </style>
   </head>
   <body>
