Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -28,6 +28,10 @@
       #bagua-table .ne {
         background-color: #ff6;
       }
+
+      #bagua-table .w {
+        background-color: #ff0;
+      }
     </style>
   </head>
   <body>
