Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -32,6 +32,11 @@
       #bagua-table .w {
         background-color: #ff0;
       }
+
+      #bagua-table .c {
+        background-color: #60c;
+        color: #fff;
+      }
     </style>
   </head>
   <body>
