Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -37,6 +37,26 @@
         background-color: #60c;
         color: #fff;
       }
+
+      #bagua-table .e {
+        background-color: #09f;
+        color: #fff;
+      }
+
+      #bagua-table .sw {
+        background-color: #963;
+        color: #fff;
+      }
+
+      #bagua-table .s {
+        background-color: #f60;
+        color: #fff;
+      }
+
+      #bagua-table .se {
+        background-color: #0c3;
+        color: #fff;
+      }
     </style>
   </head>
   <body>
