Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -57,6 +57,10 @@
         background-color: #0c3;
         color: #fff;
       }
+
+      #bagua-table .highlight {
+        background-color: red;
+      }
     </style>
   </head>
   <body>
