--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -116,6 +116,15 @@
 
     <script>
       const table = document.getElementById("bagua-table");
+
+      table.onclick = function (e) {
+        const target = e.target;
+        highlight(target);
+      };
+
+      function highlight(node) {
+        console.log(node);
+      }
     </script>
   </body>
 </html>
