--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -123,7 +123,7 @@
       };
 
       function highlight(node) {
-        console.log(node);
+        node.classList.add("highlight");
       }
     </script>
   </body>
