Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -119,6 +119,9 @@
 
       table.onclick = function (e) {
         const target = e.target;
+        if (target.tagName !== "TD") {
+          return;
+        }
         highlight(target);
       };
 
