Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -120,9 +120,14 @@
 
       table.onclick = function (e) {
         const target = e.target;
-        if (target.tagName !== "TD") {
+
+        if (!target.closest("td")) {
           return;
         }
+
+        // if (target.tagName !== "TD") {
+        //   return;
+        // }
         highlight(target);
       };
 
