Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -119,15 +119,20 @@
       let selectedId;
 
       table.onclick = function (e) {
-        const target = e.target;
+        let target = e.target;
+
+        if (!table.contains(target)) {
+          return;
+        }
 
         if (!target.closest("td")) {
           return;
         }
 
-        // if (target.tagName !== "TD") {
-        //   return;
-        // }
+        if (target.tagName !== "TD") {
+          target = target.closest("td");
+        }
+
         highlight(target);
       };
 
